[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/GolfClub/club.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Scripts/GolfClub/GolfClub.gd" type="Script" id=2]
[ext_resource path="res://Sounds/GolfBall_Hit.wav" type="AudioStream" id=3]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.462745, 0.333333, 0.0235294, 1 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.603922, 0.603922, 0.603922, 1 )
metallic = 0.23
roughness = 0.19

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.392157, 0.392157, 0.392157, 1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.306036, 0.167369, 0.46487 )

[node name="GolfClub" type="Spatial"]
transform = Transform( 0.1, 0, 0, 0, 0.3, 0, 0, 0, 0.2, 0, 0, 0 )
script = ExtResource( 2 )

[node name="ClubMesh" type="MeshInstance" parent="."]
transform = Transform( 0.3, 0, 0, 0, 0.4, 0, 0, 0, 0.3, 0, 0, -1.52279 )
mesh = ExtResource( 1 )
material/0 = SubResource( 1 )
material/1 = SubResource( 2 )
material/2 = SubResource( 3 )

[node name="ClubTip" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.10726, -1.50269 )

[node name="RayCast" type="RayCast" parent="ClubTip"]
transform = Transform( -0.974556, 0, 3.57084e-07, 0, 1, 0, -3.17551e-07, 0, -1.09588, 0, 0, -1.19209e-07 )
cast_to = Vector3( 1, 0, 0 )

[node name="HitArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.39808 )

[node name="CollisionShape" type="CollisionShape" parent="HitArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0923899, 0.116631, 0 )
shape = SubResource( 4 )

[node name="AudioHit" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
unit_db = 5.0
[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]
